stun and turn server input add gitignore add

--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@
             value="9000"
             onload="window.serverPort = this;"
           />
+          <span>STUN Server addres:</span>
+          <input
+            type="text"
+            id="stunServerAddress"
+            value=""
+            onload="window.stunServerAddress = this;"
+          />
+          <span>TURN Server addres:</span>
+          <input
+            type="text"
+            id="turnServerAddress"
+            value=""
+            onload="window.turnServerAddress = this;"
+          />
         </td>
         <td>
           <span>Username:</span>
